--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+  "node": "16.x"
+},
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.8.1",
     "@radix-ui/react-label": "^2.1.0",
